@@ -1,3 +1,5 @@
 #!/bin/bash
-SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M"
+if [[ -z "${SBT_OPTS}" ]]; then
+  SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled"
+fi
 java $SBT_OPTS -jar /usr/share/sbt/sbt-launch.jar "$@"
